insert html content to match design file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="img-container">
+        <img src="brittany-lee-dh75Y9YGljA-unsplash.jpg" alt="orages on orage tree with blue sky in background">
+        <div class="logo">
+            <img src="" alt="">
+            <p>OrangePop</p>
+        </div>
+    </div>
     
+    <div class="form-container">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis aspernatur asperiores repellendus voluptates quod quam quaerat quisquam quis nulla pariatur omnis, non laudantium nostrum repudiandae. Officia cum maiores laborum amet.</p>
+
+        <form action="#" method="POST">
+            <fieldset>
+                <legend>Create Account</legend>
+
+                <input type="text" id="firstName" name="firstName" placeholder="Ex: John">
+                <label for="firstName">First Name</label>
+
+                <input type="text" id="lastName" name="lastName" placeholder="Ex: Doe">
+                <label for="lastName">Last Name</label>
+
+                <input type="email" id="email" name="email" placeholder="Ex: myname@example.com">
+                <label for="email">Email</label>
+
+                <input type="tel" id="phone" name="phone" placeholder="Ex: 123-456-7890">
+                <label for="phone">Phone Number</label>
+
+                <input type="password" id="password" name="password">
+                <label for="password">Password</label>
+
+                <input type="passwordConfirm" id="passwordConfirm" name="passwordConfirm">
+                <label for="passwordConfirm">Confirm Password</label>
+            </fieldset>
+
+            <button type="submit">Create Account</button>
+        </form>
+
+        <p>Already have an account? <a href="#">Log in</a></p>
+    </div>
 </body>
 </html>
